cmake_minimum_required(VERSION 3.15)

project(Test VERSION 1.0.0)

#Adds all the module sources so they appear correctly in the IDE
set_property(GLOBAL PROPERTY USE_FOLDERS YES)
option(JUCE_ENABLE_MODULE_SOURCE_GROUPS "Enable Module Source Groups" ON)

#set any of these to "ON" if you want to build one of the juce examples
#or extras (Projucer/AudioPluginHost, etc):
option(JUCE_BUILD_EXTRAS "Build JUCE Extras" OFF)
option(JUCE_BUILD_EXAMPLES "Build JUCE Examples" OFF)

add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/JUCE)

juce_add_gui_app(Test PRODUCT_NAME Test)

target_sources(Test PRIVATE Main.cpp MainComponent.cpp)

target_link_libraries(Test
        PUBLIC
        juce::juce_core
        juce::juce_data_structures
        juce::juce_events
        juce::juce_graphics
        juce::juce_gui_basics
        juce::juce_gui_extra
        juce::juce_recommended_config_flags
        juce::juce_recommended_lto_flags
        )
